--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,13 @@ services:
             - 8000:8000
         volumes:
             - ./:/app
-        env_file:
-            - ./.env
+        environment:
+            - PORT=${PORT}
+            - APP_SECRET=${APP_SECRET}
+            - POSTGRES_HOST=${POSTGRES_HOST}
+            - POSTGRES_USER=${POSTGRES_USER}
+            - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+            - POSTGRES_DB=${POSTGRES_DB}
     web:
         build:
             context: .
