--- a/docker/test/Dockerfile
+++ b/docker/test/Dockerfile
@@ -1,8 +1,14 @@
 FROM golang:latest AS builder
-COPY . /app
-WORKDIR /app
+
+ENV APP_HOME /go/src/meow
+
+RUN mkdir -p $APP_HOME
+
+WORKDIR $APP_HOME
+
+COPY src/ .
 
 RUN go mod download
-RUN go get github.com/githubnemo/CompileDaemon
+RUN go mod verify
 
-ENTRYPOINT CompileDaemon --build="go build -o bin/meow ./src" --command="go test ./src -v"
+CMD go test -v
