update heroku dockerfile

--- a/docker/heroku/Dockerfile
+++ b/docker/heroku/Dockerfile
@@ -1,8 +1,17 @@
 FROM golang:latest AS builder
-COPY . /app
-WORKDIR /app
+
+ENV APP_HOME /go/src/meow
+
+RUN mkdir -p $APP_HOME
+
+WORKDIR $APP_HOME
+
+COPY src/ .
+
 RUN go mod download
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags "-w" -a -o /meow ./src
+RUN go mod verify
+
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags "-w" -a -o /meow
 
 FROM alpine:latest
 RUN apk --no-cache add ca-certificates
