Update Semaphore configuration

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -19,13 +19,6 @@ blocks:
       env_vars:
         - name: APP_SECRET
           value: catsarestatisticians
-  - name: Build and Deploy
-    task:
-      jobs:
-        - name: Build + Heroku
-          commands:
-            - checkout
-            - docker-compose build web
-            - docker tag meow_web registry.heroku.com/statcatmeow/web
-            - docker push registry.heroku.com/statcatmeow/web
-            - 'heroku container:release web --app statcatmeow'
+promotions:
+  - name: Deployment
+    pipeline_file: pipeline_2.yml
