--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -19,6 +19,16 @@ blocks:
       env_vars:
         - name: APP_SECRET
           value: catsarestatisticians
-promotions:
-  - name: Deployment
-    pipeline_file: pipeline_2.yml
+  - name: Build + Deploy
+    task:
+      secrets:
+        - name: meow-heroku
+      jobs:
+        - name: Build Containers + Release
+          commands:
+            - checkout
+            - 'heroku:container login'
+            - docker-compose build web
+            - docker tag meow_web registry.heroku.com/statcatmeow/web
+            - docker push registry.heroku.com/statcatmeow/web
+            - 'heroku container:release web --app statcatmeow'
