--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -8,7 +8,7 @@ blocks:
   - name: Build
     task:
       jobs:
-        - name: Docker Build
+        - name: Docker Build Test
           commands:
             - checkout
             - 'echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin'
@@ -16,6 +16,14 @@ blocks:
             - docker-compose build test
             - 'docker tag meow_test:latest "$DOCKER_USERNAME"/meow_test:latest'
             - 'docker push "$DOCKER_USERNAME"/meow_test:latest'
+        - name: Docker Build Web
+          commands:
+            - checkout
+            - 'echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin'
+            - checkout
+            - docker-compose build web
+            - 'docker tag meow_web:latest "$DOCKER_USERNAME"/meow_web:latest'
+            - 'docker push "$DOCKER_USERNAME"/meow_web:latest'
       env_vars:
         - name: APP_SECRET
           value: catsarestatisticians
