--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -16,7 +16,27 @@ blocks:
             - docker-compose build test
             - 'docker tag meow_test:latest "$DOCKER_USERNAME"/meow_test:latest'
             - 'docker push "$DOCKER_USERNAME"/meow_test:latest'
-        - name: Docker Build Web
+      env_vars:
+        - name: APP_SECRET
+          value: catsarestatisticians
+      secrets:
+        - name: meow-docker
+  - name: Test
+    task:
+      jobs:
+        - name: Run Tests
+          commands:
+            - checkout
+            - 'echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin'
+            - 'docker pull "$DOCKER_USERNAME"/meow_test:latest'
+            - docker-compose up meow_test -d
+            - docker-compose logs -f meow_test
+  - name: Deploy
+    skip:
+      when: branch != 'master'
+    task:
+      jobs:
+        - name: Build Web Image
           commands:
             - checkout
             - 'echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin'
@@ -24,8 +44,3 @@ blocks:
             - docker-compose build web
             - 'docker tag meow_web:latest "$DOCKER_USERNAME"/meow_web:latest'
             - 'docker push "$DOCKER_USERNAME"/meow_web:latest'
-      env_vars:
-        - name: APP_SECRET
-          value: catsarestatisticians
-      secrets:
-        - name: meow-docker
